<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="String_Array256" Id="{ecd8476e-b349-4b84-9bfb-3745154c93b4}">
    <Declaration><![CDATA[TYPE String_Array256 :
UNION
	sValue			:STRING; 
	arrByte 		:ARRAY[0..255] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>